Refactor: Adjusted index.html to correctly load external CSS styles

--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -1,14 +1,14 @@
-{% extends 'base.html' %} {% load static %} {% block start %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HR Management System</title>
-    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+    <link rel="stylesheet" href="../static/css/style.css" />
     <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}" />
   </head>
   <body>
+    {% extends 'base.html' %} {% block start %}
     <nav>
       <div class="container">
         <a href="." class="logo">HR Management System</a>
