--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HR Management System</title>
     <link rel="stylesheet" href="../static/css/style.css" />
-    <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}" />
+    <link rel="icon" href="../static/favicon.ico" />
   </head>
   <body>
     {% extends 'base.html' %} {% block start %}
