--- a/App/templates/base.html
+++ b/App/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -7,6 +8,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
+      <link rel="stylesheet" href="{% static 'css/style.css' %}">
+      <link rel="icon" href="{% static 'favicon.ico' %}">
+      {% block head %}{% endblock head %}
+    </head>
     <style>
       * {
         margin: 0;
@@ -18,6 +23,6 @@
     </style>
   </head>
   <body>
-    {% block start %} {% endblock %}
+    {% block start %} {% endblock start %}
   </body>
 </html>
