Update index.html: switch background-image URL to relative template path

--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -160,7 +160,7 @@ span {
 }
 
 .home-page .left {
-  background-image: url("{% static 'images/bge.png' %}");
+  background-image: url("bge.png");
   background-size: cover;
   background-position: center;
   min-height: 93vh;
