Refactor: move inline CSS into head block and isolate styles in dashboard templates

--- a/App/templates/authority/display.html
+++ b/App/templates/authority/display.html
@@ -57,7 +57,8 @@
     </tr>
     {%  endfor %}
 </div>
-
+{% endblock start %}
+{% block head %}
 <style>
     body{
         background-color: black;
@@ -148,4 +149,4 @@
         border-radius: 25px;
     }
 </style>
-{%  endblock  %}
+{%  endblock head %}
