--- a/App/templates/hr/display.html
+++ b/App/templates/hr/display.html
@@ -60,7 +60,8 @@
     </tr>
     {%  endfor %}
 </div>
-
+{% endblock start %}
+{% block head %}
 <style>
     body{
         background-color: black;
@@ -162,4 +163,4 @@
         background-color: rgb(40, 59, 59);
     }
 </style>
-{%  endblock  %}
+{%  endblock head %}
