--- a/App/templates/hr/edit.html
+++ b/App/templates/hr/edit.html
@@ -33,7 +33,7 @@
     <button type="submit" id="sub">Submit</button>
   </form>
 </div>
-
+{% endblock start %} {% block head %}
 <style>
   body {
     background-color: rgb(22, 22, 71);
@@ -99,4 +99,4 @@
     background-color: rgb(168, 168, 232);
   }
 </style>
-{% endblock %}
+{% endblock head %}
