--- a/App/templates/hr/insert.html
+++ b/App/templates/hr/insert.html
@@ -35,7 +35,7 @@
     <button type="reset" id="reset">Reset</button>
   </form>
 </div>
-
+{% endblock start %} {% block head %}
 <style>
   body {
     background-color: rgb(22, 22, 71);
@@ -100,4 +100,4 @@
     background-color: rgb(168, 168, 232);
   }
 </style>
-{% endblock %}
+{% endblock head %}
